servidor -> DynamicSQLBuilder